--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,7 @@
                 <div id="tag-tooltip" class="tooltip"></div>
 
                 <div id="toolbox">
-                    <!-- <button id="matrix" class="icon-button"><i class="fa-solid fa-bars icon"></i></button> -->
+                    <button id="matrix" class="icon-button"><i class="fa-solid fa-bars icon"></i></button>
                     <button id="restore" class="icon-button"><i class="fa-solid fa-rotate-right icon"></i></button>
                     <button id="zoom-in" class="icon-button"><i class="fa-solid fa-plus icon"></i></button>
                     <button id="zoom-out" class="icon-button"><i class="fa-solid fa-minus icon"></i></button>
