--- a/templates/front.html
+++ b/templates/front.html
@@ -37,7 +37,7 @@
 			<p style="white-space: pre-wrap; text-align: center; margin-bottom: -3%;">Please send any enquiry/feedback to: <b>geneticflowcontact@gmail.com</b>,
 and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details.
 			</p>
-			<p class="mt-5 text-muted">© 2023-2024<a href=" " target="_blank" style="margin-left: 2em;">京ICP备2022000473号-2</a></p>
+			<p class="mt-5 text-muted">© 2023-2024<a href="https://beian.miit.gov.cn/" target="_blank" style="margin-left: 2em;">京ICP备2022000473号-2</a></p>
 		</form>
 	</body>
 
@@ -79,15 +79,23 @@ and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details
 		}
 		// icon: https://fontawesome.com/search?o=r&s=solid&f=classic
 		// https://www.flaticon.com/free-icons/ai
+		function int2str(num) {
+			if (num)
+				return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+			return '';
+		}
+
 		function createList(data) {
 			const container1 = $('#category1');
 			const container2 = $('#category2');
 
 			for (const key in data) {
 				const item = data[key];
+				const info = item['papers'] ? `${int2str(item.authors)} authors / ${int2str(item.topic)} topic<br>${int2str(item.papers)} papers / ${int2str(item.links)} links` : 'unavailable';
 				const link = $('<a>').attr('href', `search?field=${key}`)
 									 .addClass('custom-button')
-									 .html(`<i class="${item.icon}"></i> ${item.name}`)
+									 .html(`<i class="${item.icon}"></i> ${item.name} <br> 
+									 		<p style="font-size: 13px; color: #777; margin: 0;">${info}</p>`)
 									 .attr('title', item.description || item.name);
 				switch (item["type"]) {
 					case "CS Subfield": container1.append(link); break;
