--- a/templates/index.html
+++ b/templates/index.html
@@ -154,8 +154,8 @@
                                 <option value="5">Temporal-Thematic Flow</option>
                                 <option value="6">subgraph + bar</option>
                                 <option value="7">subgraph + side</option>
-                                <option value="8" selected>subgraph + context</option>
-                                <option value="9">TopicPrism</option>
+                                <option value="8" selected>GeneticScroll</option>
+                                <option value="9">GeneticPrism</option>
                             </select>
                         </td>
                         <td>
